Dockerfile에 가상 스레드 pinned 추적하도록 설정