@@ -5,5 +5,4 @@ COPY ${JAR_FILE} app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", \
-                "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-Djdk.tracePinnedThreads=full","-jar", "/app.jar"]
